# tencent-finance

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
doc/: tencent-api.md
tencent_finance/: __init__.py  _api.py  _http.py  _stock_code.py  client.py  enums.py  exceptions.py  kline.py  quote.py
tests/: conftest.py  test_api.py  test_client.py  test_http.py  test_kline.py  test_quote.py  test_stock_code.py
