[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tencent-finance"
version = "0.1.0"
description = "Tencent stock market data library with sync and async support"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
    "httpx>=0.24",
    "pandas>=1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
